@@ -1,3 +1,4 @@
+27 Sep 2010 Code page user table support - Paul Gorlinsky
 27 Sep 2010 IPTE Range Facility - Jan Jaeger
 22 Sep 2010 Load Program Parameter Facility - Paul Gorlinsky
 19 Sep 2010 Process Panel started scripts in a seperate thread. - Paul Gorlinsky
